--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Dopefolio</title>
+    <title>Tobiloba Portfolio</title>
     <meta name="description" content="Portfolio Template for Developer" />
 
     <link rel="stylesheet" href="css/style.css" />
@@ -22,12 +22,12 @@
         <div class="header__logo-container">
           <div class="header__logo-img-cont">
             <img
-              src="./assets/png/john-doe.png"
+              src="./assets/png/IMG_5904-removebg-preview.png"
               alt="Ram Maheshwari Logo Image"
               class="header__logo-img"
             />
           </div>
-          <span class="header__logo-sub">John Doe</span>
+          <span class="header__logo-sub">Tobi Ogunleye</span>
         </div>
         <div class="header__main">
           <ul class="header__links">
@@ -84,12 +84,11 @@
     </header>
     <section class="home-hero">
       <div class="home-hero__content">
-        <h1 class="heading-primary">Hey, My name is John Doe</h1>
+        <h1 class="heading-primary">Hey, My name is Tobi Ogunleye Timothy</h1>
         <div class="home-hero__info">
           <p class="text-primary">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente solutions for
-            complex problems
+            I am a <strong>Developer</strong> with a keen eye for detail, a <strong>Tester</strong> with a knack for uncovering hidden bugs, and a <strong>Data Analyst</strong> with a passion for transforming raw data into actionable insights. 
+            My diverse skill set allows me to navigate seamlessly through the various stages of the software development lifecycle.
           </p>
         </div>
         <div class="home-hero__cta">
@@ -155,8 +154,7 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main">About Me</span>
           <span class="heading-sec__sub">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
+            I specialize in providing tailored solutions to meet unique business requirements. Let's work together to elevate your projects to new heights.
           </span>
         </h2>
         <div class="about__content">
@@ -165,19 +163,21 @@
             <div class="about__content-details">
               <p class="about__content-details-para">
                 Hey! It's
-                <strong>John Doe</strong>
-                and I'm a <strong> Frontend Web Developer </strong> located in
-                Los Angeles. I've done
+                <strong>Tobi Ogunleye</strong>
+                and I'm a <strong> Fullstack Developer </strong> located in the united Kingdom.
+                I am excellent and goal oriented individual seeking to pursue a career in information technology, with rich interpersonal and communication skills. Honed with transferable and soft skills, I am a fast learner who is result–driven, innovative, collaborative, dependable, trustworthy team player, receptive to learning new set skills and add value wherever I find myself. Throughout my journey, I have developed a keen eye for detail and a strong commitment to delivering exceptional results. 
+                I am dedicated to identifying and reporting defects promptly, working closely with the development and business teams to ensure timely resolutions.
+                <!-- the United Kingdom. I've done
                 <strong> remote </strong>
                 projects for agencies, consulted for startups, and collaborated
                 with talented people to create
                 <strong>digital products </strong>
-                for both business and consumer use.
+                for both business and consumer use. -->
               </p>
               <p class="about__content-details-para">
-                I'm a bit of a digital product junky. Over the years, I've used
+                <!-- I'm a bit of a digital product junky. Over the years, I've used
                 hundreds of web and mobile apps in different industries and
-                verticals. Feel free to
+                verticals.--> Feel free to 
                 <strong>contact</strong> me here.
               </p>
             </div>
@@ -188,18 +188,26 @@
           <div class="about__content-skills">
             <h3 class="about__content-title">My Skills</h3>
             <div class="skills">
+              <div class="skills__skill">Python</div>
               <div class="skills__skill">HTML</div>
               <div class="skills__skill">CSS</div>
               <div class="skills__skill">JavaScript</div>
+              <div class="skills__skill">Node.js</div>
+              <div class="skills__skill">Express.js</div>
+              <div class="skills__skill">jQuery</div>
               <div class="skills__skill">React</div>
-              <div class="skills__skill">SASS</div>
+              <div class="skills__skill">Bootstrap</div>
               <div class="skills__skill">GIT</div>
-              <div class="skills__skill">Shopify</div>
-              <div class="skills__skill">Wordpress</div>
-              <div class="skills__skill">Google ADS</div>
-              <div class="skills__skill">Facebook Ads</div>
-              <div class="skills__skill">Android</div>
-              <div class="skills__skill">IOS</div>
+              <div class="skills__skill">SQL</div>
+              <div class="skills__skill">Figma</div>
+              <div class="skills__skill">Jira</div>
+              <div class="skills__skill">Postman</div>
+              <div class="skills__skill">Jmeter</div>
+              <div class="skills__skill">Selenium</div>
+              <div class="skills__skill">Automation testing</div>
+              <div class="skills__skill">Manual testing</div>
+              <div class="skills__skill">Data Analysis</div>
+              <div class="skills__skill">Data mining</div>
             </div>
           </div>
         </div>
@@ -226,11 +234,9 @@
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 1</h3>
+              <h3 class="projects__row-content-title">Eden Home</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                Eden Home Realty is an innovative real estate website designed to streamline the property search process, enhance user experience, and provide comprehensive tools for buyers, sellers, and real estate professionals
               </p>
               <a
                 href="./project-1.html"
@@ -243,18 +249,16 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
+                src="./assets/png/mediamodifier_image.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 2</h3>
+              <h3 class="projects__row-content-title">Weather I.O</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                Weather I.O is an all-encompassing weather website designed to provide users with accurate and up-to-date weather information, interactive visualizations, and personalized features
               </p>
               <a
                 href="./project-2.html"
@@ -274,11 +278,32 @@
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 3</h3>
+              <h3 class="projects__row-content-title">CCFIL</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                <strong>Credite Capital Finance and Investment Limited</strong> is a wholly owned Private Limited Liability Company, incorporated in Nigeria with RC 615333 on July 27, 2005, 
+                to transact all classes of financial services by the Central Bank of Nigeria (CBN) with licensed number FC000345
+              </p>
+              <a
+                href="./project-2.html"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >Case Study</a
+              >
+            </div>
+          </div>
+          <div class="projects__row">
+            <div class="projects__row-img-cont">
+              <img
+                src="./assets/jpeg/project-mockup-example.jpeg"
+                alt="Software Screenshot"
+                class="projects__row-img"
+                loading="lazy"
+              />
+            </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">Recommendation Engine</h3>
+              <p class="projects__row-content-desc">
+                The recommendation system designed was to connect students with suitable lecturers based on their academic preferences and learning styles.
               </p>
               <a
                 href="./project-3.html"
@@ -296,8 +321,7 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main heading-sec__main--lt">Contact</span>
           <span class="heading-sec__sub heading-sec__sub--lt">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
+            If you're ready to take the next step or simply want to explore possibilities, don't hesitate to reach out. Contact me through the provided channel below or drop me an email at <strong>tobiogunleye76@gmail.com.</strong> 
           </span>
         </h2>
         <div class="contact__form-container">
@@ -389,10 +413,10 @@
             </div>
           </div>
           <div class="main-footer__row main-footer__row-2">
-            <h4 class="heading heading-sm text-lt">John Doe</h4>
+            <h4 class="heading heading-sm text-lt">Tobi Ogunleye</h4>
             <p class="main-footer__short-desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit facilis
-              tempora explicabo quae quod deserunt
+            I am a motivated and adaptable Full Stack Developer with a passion for Web development, 
+            Software testing and Data Analysis seeking an opportunity to contribute to innovative projects and expand my skills in a collaborative and growth-oriented environment.
             </p>
           </div>
         </div>
@@ -401,7 +425,7 @@
         <div class="main-footer__lower">
           &copy; Copyright 2021. Made by
           <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com"
-            >Ram Maheshwari</a
+            >Tobiloba Ogunleye</a
           >
         </div>
       </div>
