--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
+                src="./assets/png/mediamodifier_image (1).png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
@@ -271,7 +271,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
+                src="./assets/png/KC.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
@@ -294,7 +294,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
+                src="./assets/png/mediamodifier_image (3).png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
