--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css" />
   </head>
   <body>
     <header class="header">
@@ -212,6 +213,38 @@
           </div>
         </div>
       </div>
+    </section>
+    <section class="skills-showcase">
+      <ul class="skills-showcase__list">
+        <li class="skills-showcase__list-item">
+          <i class="devicon-html5-plain"></i>
+        </li>
+        <li class="skills-showcase__list-item">
+          <i class="devicon-css3-plain"></i>
+        </li>
+        <li class="skills-showcase__list-item">
+          <i class="devicon-javascript-plain"></i>
+        </li>
+        <li class="skills-showcase__list-item">
+          <i class="devicon-react-original"></i>
+        </li>
+        <li class="skills-showcase__list-item">
+          <i class="devicon-nodejs-plain"></i>
+        </li>
+        <li class="skills-showcase__list-item">
+          <i class="devicon-git-plain"></i>
+        </li>
+  
+        <li class="skills-showcase__list-item">
+          <i class="devicon-vscode-plain"></i>
+        </li>
+        <li class="skills-showcase__list-item">
+          <i class="devicon-python-plain"></i>
+        </li>
+        <li class="skills-showcase__list-item">
+          <i class="devicon-figma-plain"></i>
+        </li>
+      </ul>
     </section>
     <section id="projects" class="projects sec-pad">
       <div class="main-container">
