--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       </div>
       <div class="home-hero__socials">
         <div class="home-hero__social">
-          <a href="#" class="home-hero__social-icon-link">
+          <a href="https://www.linkedin.com/in/tobi-ogunleye-91a8a9251?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BhtjVBnZSRzWcsNzCml%2FqIA%3D%3D" class="home-hero__social-icon-link">
             <img
               src="./assets/png/linkedin-ico.png"
               alt="icon"
@@ -135,7 +135,7 @@
         </div>
         <div class="home-hero__social">
           <a
-            href="#"
+            href="https://www.instagram.com/tallthintoby/"
             class="home-hero__social-icon-link home-hero__social-icon-link--bd-none"
           >
             <img
@@ -251,8 +251,7 @@
         <h2 class="heading heading-sec heading-sec__mb-bg">
           <span class="heading-sec__main">Projects</span>
           <span class="heading-sec__sub">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
+            Explore my diverse portfolio showcasing a range of projects. Each entry unveils a unique journey, blending creativity and expertise.
           </span>
         </h2>
 
@@ -317,7 +316,7 @@
                 to transact all classes of financial services by the Central Bank of Nigeria (CBN) with licensed number FC000345
               </p>
               <a
-                href="./project-2.html"
+                href="./project-3.html"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >Case Study</a
@@ -339,7 +338,7 @@
                 The recommendation system designed was to connect students with suitable lecturers based on their academic preferences and learning styles.
               </p>
               <a
-                href="./project-3.html"
+                href="./project-4.html"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >Case Study</a
@@ -408,7 +407,7 @@
               <span>Social</span>
             </h2>
             <div class="main-footer__social-cont">
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="" rel="noreferrer" href="https://www.linkedin.com/in/tobi-ogunleye-91a8a9251/">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/linkedin-ico.png"
@@ -436,7 +435,7 @@
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://www.instagram.com/tallthintoby/">
                 <img
                   class="main-footer__icon main-footer__icon--mr-none"
                   src="./assets/png/insta-ico.png"
@@ -456,8 +455,8 @@
 
         <!-- If you give me some credit or shoutout here by linking to my website, then it will be a big thing for me and will help me a lot :) -->
         <div class="main-footer__lower">
-          &copy; Copyright 2021. Made by
-          <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com"
+          &copy; Copyright 2023. Made by
+          <a rel="noreferrer" target="_blank" href="https://tobioguns.com"
             >Tobiloba Ogunleye</a
           >
         </div>
@@ -467,3 +466,4 @@
     <script src="./index.js"></script>
   </body>
 </html>
+
