--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
          <form class="contact__form" action="https://formsubmit.co/tobiogunleye533@gmail.com" method="POST">
             <input type="text" name="_honey" style="display: none;">
             <input type="hidden" name="_captcha" value="false">
-            <!-- <input type="hidden" name="_next" value="https://tobexxy.github.io/new-portfolio-/message.html"> -->
+            <input type="hidden" name="_next" value="https://tobexxy.github.io/new-portfolio-/messagess.html">
             <div class="contact__form-field">
               <label class="contact__form-label" for="name">Name</label>
               <input
