--- a/index.html
+++ b/index.html
@@ -273,9 +273,11 @@
           <i class="devicon-nodejs-plain colored"></i>
         </li>
         <li class="skills-showcase__list-item">
+          <i class="devicon-express-original colored"></i>
+        </li>
+        <li class="skills-showcase__list-item">
           <i class="devicon-git-plain colored"></i>
         </li>
-  
         <li class="skills-showcase__list-item">
           <i class="devicon-vscode-plain colored"></i>
         </li>
