--- a/index.html
+++ b/index.html
@@ -324,12 +324,13 @@
           </div>
           <div class="projects__row">
             <div class="projects__row-img-cont">
+              <a href="./project-2.html">
               <img
                 src="./assets/png/mediamodifier_image.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
-              />
+              /></a>
             </div>
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">Weather I.O</h3>
@@ -337,21 +338,22 @@
                 Weather I.O is an all-encompassing weather website designed to provide users with accurate and up-to-date weather information, interactive visualizations, and personalized features
               </p>
               <a
-                href="./project-2.html"
+                href="https://tobexxy.github.io/weather-i.o/"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
-                >Case Study</a
+                >Live Link</a
               >
             </div>
           </div>
           <div class="projects__row">
             <div class="projects__row-img-cont">
-              <img
+              <a href="./project-3.html">
+                <img
                 src="./assets/png/KC.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
-              />
+              /></a>
             </div>
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">CCFIL</h3>
@@ -360,21 +362,22 @@
                 to transact all classes of financial services by the Central Bank of Nigeria (CBN) with licensed number FC000345
               </p>
               <a
-                href="./project-3.html"
+                href="https://creditecapital.com/"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
-                >Case Study</a
+                >Live Link</a
               >
             </div>
           </div>
           <div class="projects__row">
             <div class="projects__row-img-cont">
+              <a href="./project-4.html">
               <img
                 src="./assets/png/mediamodifier_image (3).png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
-              />
+              /></a>
             </div>
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">Recommendation Engine</h3>
@@ -382,10 +385,10 @@
                 The recommendation system designed was to connect students with suitable lecturers based on their academic preferences and learning styles.
               </p>
               <a
-                href="./project-4.html"
+                href="https://sites.google.com/view/my-projectf"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
-                >Case Study</a
+                >Live Link</a
               >
             </div>
           </div>
