--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         <h2 class="heading heading-sec heading-sec__mb-bg">
           <span class="heading-sec__main">Projects</span>
           <span class="heading-sec__sub">
-            Explore my diverse portfolio showcasing a range of projects. Each entry unveils a unique journey, blending creativity and expertise.
+            Explore my diverse portfolio showcasing a range of projects. Each entry unveils a unique journey, blending creativity and expertise. Click on the project icons to know more about the project.
           </span>
         </h2>
 
