--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
         <h2 class="heading heading-sec heading-sec__mb-bg">
           <span class="heading-sec__main">Projects</span>
           <span class="heading-sec__sub">
-            Explore my diverse portfolio showcasing a range of projects. Each entry unveils a unique journey, blending creativity and expertise. Click on the project icons to know more about the project.
+            Explore my diverse portfolio showcasing a range of projects. Each entry unveils a unique journey, blending creativity and expertise. <strong>Click on the project icons to know more about the project.</strong>
           </span>
         </h2>
 
@@ -399,6 +399,29 @@
                 <div class="projects__row-img-cont">
                   <a href="./project-5.html">
                   <img
+                    src="./assets/png/rjn (2).png"
+                    alt="Software Screenshot"
+                    class="projects__row-img"
+                    loading="lazy"
+                   
+                  /></a>
+                </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">RJN Childcare Services</h3>
+              <p class="projects__row-content-desc">
+                RJN Child Minding Service is a website created to establish the online presence of a new childminding business.
+              </p>
+              <a
+                href="https://tobexxy.github.io/rjn-services/"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >Live Link</a
+              ></div>
+            </div>
+            <div class="projects__row">
+                <div class="projects__row-img-cont">
+                  <a href="#">
+                  <img
                     src="./assets/png/mediamodifier_image 7.png"
                     alt="Software Screenshot"
                     class="projects__row-img"
@@ -412,7 +435,7 @@
                     Presentation and visualisation of data using data mining and data analysis techniques through Power BI.
                   </p>
                   <a
-                    href="#"
+                    href="./project-6.html"
                     class="btn btn--med btn--theme dynamicBgClr"
                     target="_blank"
                     >Read More</a
@@ -534,7 +557,7 @@
 
         <!-- If you give me some credit or shoutout here by linking to my website, then it will be a big thing for me and will help me a lot :) -->
         <div class="main-footer__lower">
-          &copy; Copyright 2023. Made by
+          &copy; Copyright 2024. Made by
           <a rel="noreferrer" target="_blank" href="https://tobioguns.com"
             >Tobiloba Ogunleye</a
           >
@@ -546,3 +569,6 @@
   </body>
 </html>
 
+
+
+Cleaned, processed, and transformed data to inform business decisions, utilizing MySQL, Excel, and Power BI. • Conducted in-depth analysis of the comprehensive sales database encompassing transactions, customer details, product information, and market insights. Employed Power BI for ETL operations and data cleaning to build insightful dashboards. • Executed data wrangling, normalized currency, and rectified invalid values to ensure data accuracy. • Developed robust dashboards that played a pivotal role in generating sales insights for the Atliq hardware business.
