--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             />
           </a>
         </div>
-        <div class="home-hero__social">
+        <!-- <div class="home-hero__social">
           <a href="#" class="home-hero__social-icon-link">
             <img
               src="./assets/png/twitter-ico.png"
@@ -132,10 +132,10 @@
               class="home-hero__social-icon"
             />
           </a>
-        </div>
+        </div> -->
         <div class="home-hero__social">
           <a
-            href="https://www.instagram.com/tallthintoby/"
+            href="https://www.instagram.com/manofmanytalent/"
             class="home-hero__social-icon-link home-hero__social-icon-link--bd-none"
           >
             <img
@@ -298,7 +298,7 @@
         <h2 class="heading heading-sec heading-sec__mb-bg">
           <span class="heading-sec__main">Projects</span>
           <span class="heading-sec__sub">
-            Explore my diverse portfolio showcasing a range of projects. Each entry unveils a unique journey, blending creativity and expertise. <strong>Click on the project icons to know more about the project.</strong>
+            Explore my diverse portfolio showcasing a range of projects. Each entry unveils a unique journey, blending creativity and expertise. <br><strong style="color: #0062b9; font-size: 2rem;">Click on the project icons to explore more details about each project.</strong>
           </span>
         </h2>
 
@@ -316,7 +316,7 @@
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">Eden Home</h3>
               <p class="projects__row-content-desc">
-                Eden Home Realty is an innovative real estate website designed to streamline the property search process, enhance user experience, and provide comprehensive tools for buyers, sellers, and real estate professionals
+              <b>Eden Home Realty </b>is an innovative real estate website designed to streamline the property search process, enhance user experience, and provide comprehensive tools for buyers, sellers, and real estate professionals
               </p>
               <a
                 href="https://tobexxy.github.io/edenhomes.github.io/"
@@ -339,10 +339,10 @@
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">Weather I.O</h3>
               <p class="projects__row-content-desc">
-                Weather I.O is an all-encompassing weather website designed to provide users with accurate and up-to-date weather information, interactive visualizations, and personalized features
+              <b>Weather I.O </b>is an all-encompassing weather website designed to provide users with accurate and up-to-date weather information, interactive visualizations, and personalized features
               </p>
               <a
-                href="https://tobexxy.github.io/weather-i.o/"
+                href="https://tobexxy.github.io/OG-weather/"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >Live Link</a
@@ -373,6 +373,32 @@
               >
             </div>
           </div>
+
+          <div class="projects__row">
+            <div class="projects__row-img-cont">
+              <a href="./project-7.html">
+                <img
+                  src="./assets/jpeg/mediamodifier_image (1).png"
+                  alt="Software Screenshot"
+                  class="projects__row-img"
+                  loading="lazy"
+                />
+              </a>
+            </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">KC MFB</h3>
+              <p class="projects__row-content-desc">
+                <b>KC Micro Finance Bank</b> is a microfinance bank that offers services tailored to individuals and small businesses with a focus on loans, savings products & financial literacy.
+              </p>
+              <a
+                href="https://www.kcmfb.com/"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >Live Link
+              </a>
+            </div>
+          </div>
+          
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <a href="./project-4.html">
@@ -395,6 +421,7 @@
                 >Live Link</a
               ></div>
             </div>
+            
             <div class="projects__row">
                 <div class="projects__row-img-cont">
                   <a href="./project-5.html">
@@ -409,7 +436,7 @@
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">RJN Childcare Services</h3>
               <p class="projects__row-content-desc">
-                RJN Child Minding Service is a website created to establish the online presence of a new childminding business.
+              <b>RJN Child Minding Service </b>is a website created to establish the online presence of a new childminding business.
               </p>
               <a
                 href="https://tobexxy.github.io/rjn-services/"
@@ -523,21 +550,21 @@
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <!-- <a target="_blank" rel="noreferrer" href="#">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/twitter-ico.png"
                   alt="icon"
                 />
-              </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              </a> -->
+              <!-- <a target="_blank" rel="noreferrer" href="#">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/yt-ico.png"
                   alt="icon"
                 />
-              </a>
-              <a target="_blank" rel="noreferrer" href="https://www.instagram.com/tallthintoby/">
+              </a> -->
+              <a target="_blank" rel="noreferrer" href="https://www.instagram.com/manofmanytalent/">
                 <img
                   class="main-footer__icon main-footer__icon--mr-none"
                   src="./assets/png/insta-ico.png"
@@ -557,7 +584,7 @@
 
         <!-- If you give me some credit or shoutout here by linking to my website, then it will be a big thing for me and will help me a lot :) -->
         <div class="main-footer__lower">
-          &copy; Copyright 2024. Made by
+          &copy; Copyright 2025. Made by
           <a rel="noreferrer" target="_blank" href="https://tobioguns.com"
             >Tobiloba Ogunleye</a
           >
@@ -571,4 +598,3 @@
 
 
 
-Cleaned, processed, and transformed data to inform business decisions, utilizing MySQL, Excel, and Power BI. • Conducted in-depth analysis of the comprehensive sales database encompassing transactions, customer details, product information, and market insights. Employed Power BI for ETL operations and data cleaning to build insightful dashboards. • Executed data wrangling, normalized currency, and rectified invalid values to ensure data accuracy. • Developed robust dashboards that played a pivotal role in generating sales insights for the Atliq hardware business.
